--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,11 @@ iframe{
 	background-color: #D4D5DB;
 }
 #caja{
-	padding: 3%;
+	padding: 2%;
 	margin-top: 5%;
 }
 .cuadro{
 	background-color: #8B8585;
-	/* padding-top: 1%;
-	width: 23%; */
 	margin-top: 3%;
 }
 .espacio{
@@ -35,4 +33,8 @@ iframe{
 	background-color: #ABA8A8;
 	padding-left: 4%;
 	padding-right: 4%;
+}
+#barra{
+	size: 3px;
+	background-color: #5D5B5B;
 }
